# ChangeLog for net-irc/konversation
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/konversation/ChangeLog,v 1.115 2014/03/31 20:02:08 johu Exp $

  31 Mar 2014; Johannes Huber <johu@gentoo.org> konversation-1.5.ebuild:
  x86 stable, bug #505202

  29 Mar 2014; Chema Alonso <nimiux@gentoo.org> konversation-1.5.ebuild:
  Stable for amd64 wrt bug #505202

*konversation-1.5 (15 Jan 2014)

  15 Jan 2014; Manuel Rüger <mrueg@gentoo.org> +konversation-1.5.ebuild,
  -files/konversation-1.5_rc1-setting-admin-mode.patch,
  -konversation-1.5_rc1-r1.ebuild, -konversation-1.5_rc2.ebuild:
  Version bump. Cleanup old.

*konversation-1.5_rc2 (08 Jan 2014)

  08 Jan 2014; Manuel Rüger <mrueg@gentoo.org> +konversation-1.5_rc2.ebuild:
  Version bump.

*konversation-1.5_rc1-r1 (17 Jun 2013)

  17 Jun 2013; Johannes Huber <johu@gentoo.org>
  +files/konversation-1.5_rc1-setting-admin-mode.patch,
  +konversation-1.5_rc1-r1.ebuild, -konversation-1.5_rc1.ebuild:
  Revision bump adds upstream patch to set the admin mode properly. Spotted by
  shentino@gmail.com, wrt bug #471284.

*konversation-1.5_rc1 (01 Jun 2013)

  01 Jun 2013; Tomáš Chvátal <scarabeus@gentoo.org>
  +konversation-1.5_rc1.ebuild:
  Move 1.5rc1 from overlay here.

  15 Jan 2012; Johannes Huber <johu@gentoo.org> -konversation-1.3.1.ebuild:
  Remove old.

  15 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> konversation-1.4.ebuild:
  x86 stable wrt bug #396555

  31 Dec 2011; Agostino Sarubbo <ago@gentoo.org> konversation-1.4.ebuild:
  Stable for AMD64, wrt bug #396555

*konversation-1.4 (08 Dec 2011)

  08 Dec 2011; Johannes Huber <johu@gentoo.org> +konversation-1.4.ebuild:
  Version bump, bug #392759

  16 Mar 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  konversation-1.3.1.ebuild:
  Update dependency on qca-ossl per bug #358995.

  28 Jan 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  konversation-1.3.1.ebuild:
  Fix repoman warning.
