@@ -1,26 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST konversation-1.4.tar.xz 2902368 SHA256 db4e605a27dd6012972aa4d2c07cd4736f9e6a68febb41a5d59f3614d6d21b0c SHA512 c6c6a16a3bf46dd5f48bb36cc19b208558017222ce26e0657d12846899fc57c87b6bc900bcce95ec470a2305bb182eed31e1523757d244b150c6d1070e8624d2 WHIRLPOOL 962ebe3f3a8f05a14416601cf804473e50de9fdd546e09a95369951e4db461f50161e39be487110743082b8795d9d53ea2e05a6cceeb3978734334b473f14876
 DIST konversation-1.5.tar.xz 3169284 SHA256 382de6217ec1e27c292ec33473a31b893863dc699c79669f5ef364152719546f SHA512 b70307911e59547311864b1268f53a36e32a95f4691379f569bacd7bc7d05624fb6b79fc4830430bf1b821480a9a1776d68548dfe12aba63d38cd0d358b71302 WHIRLPOOL d9c1b0544c7e9a2f9d602c312140ee2079497a580a3ef51e7c987d852f898ec7edbf261211d7935fadd5393107b79725d9b7561be8242ae8b1559fb75234e5b1
-EBUILD konversation-1.4.ebuild 1053 SHA256 0fb101f98edae2ef29dfbd95c1f4fe3bed72097bf1c2ba46f676ef9852f44ff7 SHA512 a12dd903422f0d7054eeb109bdce35bdfb000fa8c98fc7b6164df16ec71def789648e91a8e3dcc53f24d15f5751443b76e3a172bc5562a72faee39bf611ad2d1 WHIRLPOOL f588654e02d144c93928d3c52a836891e8e88be49b7f3cb4e47cd42800a9290186c97ad329f7ee813d0984d2da098597349e9554fe9cb7ec78b9b66032241314
 EBUILD konversation-1.5.ebuild 1027 SHA256 8df6de66a7b27fd83cf88788939253005f26096a7645d778c3978ea96b8cb854 SHA512 79ce200f1f6adb3e2ab76709798497165ddbf33a1aae3e166d7da37de407ab49e0cb840565b5e99bb83058e3c4e442e8eb93cceb0baa2fc402d24bf5c1bce301 WHIRLPOOL 39ee6ed2a2e31cdbbf46a1dd3db840158b11b64d5a20f99b3a57ea976bc3cb007c3594284a5e0a106a06710501e1452841eb0a2f431612ddd400336d11263381
-MISC ChangeLog 16933 SHA256 2d8d65bcff1a177ef2db86d956d577c382f97aee8b6cf07a23f594f333fc3434 SHA512 8c13801b720a818664a7565b00b05b39857b160a8b74d0526e6e98fde70123e1389182689ed511bd40da236950b23b7de149a7a4dce5b49823a81f73c91feea3 WHIRLPOOL a7d38456e7dfd733bec71c4a639021c25eb63956834d87d0f967debe7422808fb88b3bfedfc34ddf2912bfaa3f2567bf2b1636f75bd5c2ffe07d49dc4d768b8d
+MISC ChangeLog 17022 SHA256 a399a61432e79e45817b85bcdde2cc6849f9b6e1e149b2dec41294a7409e9d1f SHA512 32cfa121735e9678f89157326d30f2ff5619410d04840ffc217bc64af11037d7a57a0a9ebe666784ab87b490216da117cce251f0e2e4edba90bf4be5f17d83d0 WHIRLPOOL e85ba918d9e5c2182ecb70bf724d15bad70736d382d443eb86fcd625ea1238479c49a4b88217a51ca4c4460313645720899506971221e5e3b8de301b86e0cca4
 MISC metadata.xml 177 SHA256 0d969af6afa28170dac4b321dd8489b27d322f49f40c39aa3f614953f85292ce SHA512 65c9833c0dfd58cbec68d7c3d88849dbd9477cd76cc983fc580d531525998cf280c6b708b9d3eb970f9b6e18bcf21da194bbb0a1931efbfc4164b1709226cff0 WHIRLPOOL 427f0f186ab280f1f9aaa3f27f89fc69743a38848e0e2d369013da2c907faabc47e4a66497ae6079376c7742db639f42d07262bc011c0e8311cd6228a9867b48
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTOcnFAAoJEGVpnaTzz9K9srEP/1tsXuCRzj20FgbcW9ed3OKS
-vd2EnsEDXB+XQrTDICJUgrc2h+DYJIdNZ0X2c2jGLGv88NI30wtoDAYwHojaa8f8
-G15CWjUWEiSDvOZ2s5xfi8PxLXprVezSiS9xATopizUQyAjEOKVLoRlSRnrUk2n+
-/Fh7EZtKz7yBA4/iHzFdQMSJ5JghVAadvC+AIV3zuw4hVlpZ6MwwREFkk6q0h0B5
-0K1RyMeP2N3c4o2qGqm7MLKpQ93DsR5kCVoGV6UblEcCpMho8VwxqdyhNDoNcib6
-T3rh60TrRMvU7qxLMmIyCKqEKhwZEIgVukhXbkljotpZvgVVXgS0zPr4sy9FTfxm
-JEvEatyHhBedDH8EHrbByciyfYPWBysKBJCgignJGV9Da1MZlDIUO/GaWvzMHpEv
-1GtJfoGEZc5d13toZ86w1Tgex0NLeNZCw9ECCFmAkJBnlGqAlzpNl3dJ8+DRVS6F
-Vzz599UB2FsOlYui3y43sLhAbfL8udKERG5ZmE+lj3Do9DVvYtsP9B0eQfn3fTBH
-EOmbLnTF4/HMdS5HtpqNpu5antUJ5SuW2oz5sNxIjpu5esvgU98yLPHduUT+W5LZ
-CIY5/cJXdVf4JtnCTW8uRlS0QGUBlME+owuPWYLmaEPSx2qyFxniGRtsXVFRzSOp
-wKKh3pg1HIBLTOmdM9tc
-=qLY+
+iQIcBAEBCAAGBQJTOcpQAAoJEGVpnaTzz9K98IQP/3JQZolLEDXNEtmcMFE0gZdC
+14AYnqk/P3l+pUAgoSXtPrk/gfBK7tySKVDqMmAmRHLW4upqd0y3qREmiGjJ3f0X
+azvbdEQRbr++XtwYC9OEmq3sYPSf9nOAp91s1QTAY9a6vtx3/XcSjC6qI7LEjquE
+N4zGccNhsAJE7InSpe05TVxxDysGYljjV0j4HzStzhIz2tLjyy3ZDJLKAE6P+Ers
+7X4As600jPnsU5VUiSIjwTutl5snX4JycF17xDvheiOwacgAxNPOHvHmQVuPMCHo
+hUZpY+3H7lepT6XbtawvjPzrD9sBibESx9g9X2f5gIyiL2nxe226NuRMfG8RJvV9
+Z2Kx/iZ/gGacr811GJkw+qCO3c7qv/A30Kt3zuDvWlZzNKfqhdqN8M+3PLdVdROv
+c81M0khge6vVeLEbsEdiQzFe6jtpdZab+nmMJIGK7TgmXK2t05OSiTJoyPMwn7ln
+qbVHmSPBPj2hriaaFuQrE31/nb1DhnXuSVnMcViTfEURcsAtG/+OBPV3rHY57csf
+9s8SjQqOK0x+ioDc0DtaAdOh4UeFfQ59cFxl48n3qK/0SdHyD+lnN6r8R0SkrWkb
+WrBpbHXLtXNHQDYnbyMg8l1CVrbVPUoZsDslgnmVlQdMMEsnXmAUOxi96c5kmY1L
+6SmKBZdDffBbwG9cBkLR
+=ou07
 -----END PGP SIGNATURE-----
