@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/konversation
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/konversation/ChangeLog,v 1.115 2014/03/31 20:02:08 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/konversation/ChangeLog,v 1.116 2014/03/31 20:04:31 johu Exp $
+
+  31 Mar 2014; Johannes Huber <johu@gentoo.org> -konversation-1.4.ebuild:
+  Remove old.
 
   31 Mar 2014; Johannes Huber <johu@gentoo.org> konversation-1.5.ebuild:
   x86 stable, bug #505202
